src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_6.snap
---
source: src/parser/test.rs
description: "fn(, x) {}"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Err(
                    Err(ExpectedTokenNotFound("SyntaxError: Expected '<identifier>' not found."), (0,3)->(0,4)),
                ),
            ],
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,8)->(0,9)),
                statements: [],
            },
        ),
    },
]

===================================

fn(, x) {}
   ^ [Error] SyntaxError: Expected '<identifier>' not found.
